--- a/.github/workflows/github-stats.yml
+++ b/.github/workflows/github-stats.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
