--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add stats/github-metrics.svg
+          git add stats
           git commit -m "Update GitHub metrics" || exit 0
           git push
