--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -32,16 +32,18 @@ jobs:
           # ЯЗЫКИ (аналог Top Langs)
           plugin_languages: yes
           plugin_languages_limit: 6
-          plugin_languages_threshold: 2%
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_threshold: 0%
+          plugin_languages_details: percentage
           plugin_languages_colors: github
-          plugin_languages_indepth: false
+          plugin_languages_indepth: true
+
 
           # ВНЕШНИЙ ВИД
-          config_display: columns
-          config_padding: 0, 8%
+          config_display: block
+          config_padding: 0, 5%
           config_timezone: Europe/Moscow
           config_theme: dark
+          
 
       - name: Commit and push
         run: |
