--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -36,6 +36,8 @@ jobs:
           plugin_languages_details: percentage
           plugin_languages_colors: github
           plugin_languages_indepth: true
+          plugin_languages_sections: most-used
+          plugin_languages_layout: list
 
 
           # ВНЕШНИЙ ВИД
